# data-blueprint

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
datablueprint/: cli.py
datablueprint/backend/: main.py
datablueprint/backend/core/: config.py
datablueprint/backend/models/: schemas.py
datablueprint/backend/routers/: chat.py  files.py
datablueprint/backend/services/: duckdb_service.py  llm_service.py  profiler_service.py
datablueprint/core/: csv_profiler.py  drift_detector.py  profiler.py
datablueprint/formatters/: ddl_generator.py  json_generator.py  markdown_generator.py
datablueprint/security/: pii_masker.py
datablueprint/tests/: conftest.py  test_01_api.py  test_02_ingestion_chaos.py  test_03_llm_semantics.py  test_04_duckdb_math.py  test_05_e2e_chat.py  test_1_api.py
sample_data/: clientes_prueba.csv  empleados_db.csv  inventario_log.csv  ventas_q1.csv
