[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-blueprint"
version = "0.1.0"
authors = [
  { name="Fernando Navarro", email="fnavarrogonzalez26@gmail.com" },
]
description = "Motor de perfilado de datos y generacion de contexto seguro para IA"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["data", "profiling", "pii", "parquet", "json", "ai-context"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "polars>=0.20.0",
]

[project.optional-dependencies]
dev = ["build", "twine", "pytest"]

[project.urls]
"Homepage" = "https://github.com/tu-usuario/data-blueprint"
"Bug Tracker" = "https://github.com/tu-usuario/data-blueprint/issues"

[project.scripts]
data-blueprint = "datablueprint.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["datablueprint*"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]